Moved scrolling to container instead of body so modal will prevent behind page from scrolling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,16 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.container-fluid {
+	overflow-y: scroll;
+	height: 100%;
+}
+html, body {
+	overflow: hidden;
+	height: 100%;
+}
+
+
 .row {
 	margin-left: 0px;
 	margin-right: 0px;
