--- a/app/assets/stylesheets/request_attachments.scss
+++ b/app/assets/stylesheets/request_attachments.scss
@@ -44,7 +44,7 @@ a.attachment-thumb-options-item {
     overflow-x: hidden;
     overflow-y: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
 }
 
 
@@ -52,7 +52,7 @@ a.attachment-thumb-options-item {
 .modal-content {
     margin: auto;
     display: block;
-    // width: 80%;
+    width: 80%;
     // max-width: 700px;
 }
 
